朋友圈导航栏完善

--- a/templates/common/module-dialog.html
+++ b/templates/common/module-dialog.html
@@ -1,5 +1,5 @@
-<div class="modal fade" id="mask" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
+<div class="modal fade" id="mask">
+	<div class="modal-dialog modal-lg">
 		<div class="modal-content">
 			<h4 align="center">留下你的足迹吧</h4>
 			<div align="center">
