添加了继续新建和返回相册

--- a/templates/AlbumCreate.html
+++ b/templates/AlbumCreate.html
@@ -30,8 +30,8 @@
             <textarea id="xcms" rows="3" cols="40" name="discribe"  placeholder="说说相册的故事吧..."></textarea>
             </div>
             <div class="form-group">
-            <input type="submit" value="确认">
-            <button onclick="abc()">取消</button>
+            <input class="btn btn-outline-secondary btn-sm" type="submit" value="确认">
+            <a class="btn btn-outline-secondary btn-sm" href="/albums" role="button">返回相册</a>
             </div>
         </form>
     </div>
