--- a/templates/feed.html
+++ b/templates/feed.html
@@ -6,40 +6,34 @@
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
 	 <link rel="stylesheet" href="{{ static_url('css/bootstrap.min.css') }}">
 	 <link rel="icon" href="/static/favicon.ico">
+	<link rel="stylesheet" href="/static/css/feed.css">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 
 </head>
 <body>
 {% module Navbar() %}
+<section class="jumbotron" >
+  <div class="container" >
+    <div class="row">
+      <div class="col-md-9">
+      </div>
+      <div class="col-md-3">
+        <h1 class="jumbotron-heading text-white">{{ user.nickname }}</h1>
+        <p>
+          <a href="#" class="btn btn-primary my-2">我也想说</a>
+          <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 <main role="main">
 <div class="container" >
-    <div class="row clearfix" >
-        <div class="col-md-2 column">
-        </div>
-    <div class="col-md-8 column" style="background-color:#cccccc" >
-			<h1 class="text-center" >
-				欢迎来到广场诸位
-			</h1>
-		</div>
-
-     <div class="col-md-2 column">
-        </div>
-    </div>
-	 <div class="row clearfix" >
-        <div class="col-md-2 column">
-        </div>
-    <div class="col-md-8 column" style="background-color:#eeeeee" >
-
-		</div>
-
-     <div class="col-md-2 column">
-        </div>
-    </div>
 	{%for i in range(len(feed))[::-1]%}
-	<div class="row clearfix" id= {{feed[i]['time']}}>
+	<div class="row clearfix" id= {{feed[i]['time']}} >
 		<div class="col-md-2 column">
 		</div>
-		<div class="col-md-8 column" style="background-color:#eeeeee">
+		<div class="col-md-8 column" style="background:url(/static/img/feed_block.jpg);background-repeat:no-repeat;background-size:100% 100%;">
             <div class="row clearfix" >
                 <div class="col-md-6 column" >
 					<p>
@@ -57,8 +51,8 @@
             </p>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="thumbnail">
-						<img alt="400x300" src="/static/img/{{feed_p[i]['file_name']}}" />
+					<div class="thumbnail" align="center">
+						<img alt="400x300" src="/static/images/min/{{feed[i]['photo_id']}}.jpg"/>
 					</div>
 				</div>
 			</div>
@@ -141,7 +135,7 @@
 		<div class="col-md-2 column">
 		</div>
 	</div>
-	{%if i+1 < len(feed)%}
+	{%if i > 0%}
     <p>
     </p>
 	{%end%}
