--- a/templates/common/module-navbar.html
+++ b/templates/common/module-navbar.html
@@ -1,6 +1,11 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="/">{{ escape(handler.settings["website_title"]) }}</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" href="/">首页
@@ -9,6 +14,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/feed/">广场</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/albums/">相册</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -36,5 +44,6 @@
       </li>
       {%end%}
     </ul>
+  </div>
   </nav>
 </header>
