--- a/templates/albums.html
+++ b/templates/albums.html
@@ -76,6 +76,7 @@
                 <div class="mt-2 d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <a class="btn btn-sm btn-outline-secondary" href="/u/{{ user.id }}/albums/{{ album.album_id }}/edit">编辑</a>
+                    <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#exampleModal" data-whatever="{{ album.album_id }}">删除</button>
                     <a class="btn btn-sm btn-outline-secondary" href="/u/{{ user.id }}/albums/{{ album.album_id }}/delete">删除</a>
                   </div>
                   <small class="text-muted">{{ photos_num[album.album_id] }}张照片</small>
@@ -94,6 +95,39 @@
     </div>
   </div>
 </div>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">删除照片？</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form method="post" action="/albums/delete">
+      <div class="modal-body">
+        
+          <div class="form-group">
+            <label for="album_id" class="col-form-label">要删除的照片id</label>
+            <input type="text" class="form-control" id="album_id" name="album_id" readonly>
+          </div>
+          这项动作无法恢复。 你确定要永久删除这张照片？
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+        <button type="submit" class="btn btn-primary">确认删除</a>
+      </div>
+    </form>
+    </div>
+  </div>
+</div>
+<script>$('#exampleModal').on('show.bs.modal', function (event) {
+    var button = $(event.relatedTarget) // Button that triggered the modal
+    var album_id = button.data('whatever') 
+    var modal = $(this)
+    modal.find('.col-form-label').text('要删除的照片id:' + album_id)
+    modal.find('.modal-body input').val(album_id)
+  })</script>
 {% end %}
 
 
