--- a/templates/AlbumCreate.html
+++ b/templates/AlbumCreate.html
@@ -1,40 +1,31 @@
 {% extends "base.html" %}
 
 {% block head %}
+<title>新建相册| {{ escape(handler.settings["website_title"]) }}</title>
 {% end %}
 {% block body %}
 
-
-
-
-<!--这里是个人相册标题和概要-->
-<?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN">
-
-<section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">创建相册</h1>
+        <div class="py-5 text-center">
+            <h1 class="jumbotron-heading">创建相册</h1>
+            <form action="/albums/new"  role="form" method="post">
+                <div class="form-group">
+                    <label for="name">相册名称：</label>
+                    <br>
+                    <input  class="form-control" id="xcname" type="text" name="name" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label for="name">相册描述：</label>
+                    <br>
+                    <textarea class="form-control" id="xcms" rows="3" name="discribe" placeholder="说说相册的故事吧..."></textarea>
+                </div>
+                <div class="form-group">
+                    <input class="btn btn-primary" type="submit" value="确认">
+                    <a class="btn btn-secondary" href="/albums" role="button">返回相册</a>
+                </div>
+            </form>
+        </div>
+    
     </div>
-    <div id="div1">
-        <form action="/albums/new"  onsubmit="setDate();return validate_form(this)" role="form" method="post">
-            <div class="form-group">
-            <label for="name">相册名称：</label>
-            <br>
-            <input id="xcname" type="text" name="name"required autofocus >
-            </div>
-            <div class="form-group">
-            <label for="name">相册描述：</label>
-            <br>
-            <textarea id="xcms" rows="3" cols="40" name="discribe"  placeholder="说说相册的故事吧..."></textarea>
-            </div>
-            <div class="form-group">
-            <input class="btn btn-outline-secondary btn-sm" type="submit" value="确认">
-            <a class="btn btn-outline-secondary btn-sm" href="/albums" role="button">返回相册</a>
-            </div>
-        </form>
-    </div>
-  </section>
 
 {% end %}
