--- a/templates/albums.html
+++ b/templates/albums.html
@@ -99,7 +99,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">删除照片？</h5>
+        <h5 class="modal-title" id="exampleModalLabel">删除相册？</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -108,10 +108,10 @@
       <div class="modal-body">
         
           <div class="form-group">
-            <label for="album_id" class="col-form-label">要删除的照片id</label>
+            <label for="album_id" class="col-form-label">要删除的相册id</label>
             <input type="text" class="form-control" id="album_id" name="album_id" readonly>
           </div>
-          这项动作无法恢复。 你确定要永久删除这张照片？
+          这项动作无法恢复。 你确定要永久删除这个相册？
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
@@ -135,11 +135,11 @@
           <form method="post" action="/albums/edit">
             <div class="form-group">
                 <label for="recipient-name" class="col-form-label">相册ID</label>
-                <input type="text" class="form-control" id="album-id" name="id" readonly>
+                <input type="text" class="form-control" id="album-id" name="album_id" readonly>
               </div>
             <div class="form-group">
               <label for="recipient-name" class="col-form-label">相册名称</label>
-              <input type="text" class="form-control" id="album-name" name="name">
+              <input type="text" class="form-control" id="album-name" name="name" required>
             </div>
             <div class="form-group">
               <label for="message-text" class="col-form-label">相册描述</label>
@@ -148,7 +148,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-          <button type="button" class="btn btn-primary">确认更改</button>
+          <button type="submit" class="btn btn-primary">确认更改</button>
         </div>
       </form>
       </div>
@@ -169,7 +169,9 @@
   var name = button.data('name')
   var description = button.data('description')
   var modal = $(this)
-  modal.find('.modal-body input').val(recipient)
+  modal.find('.modal-body #album-id').val(id)
+  modal.find('.modal-body #album-discribe').val(description)
+  modal.find('.modal-body #album-name').val(name)
 })
   
   </script>
