--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -2,7 +2,8 @@
 
 
 {% block body %}
-<form action="/signup" method="POST">
+<div class="container">
+ <form action="/signup" method="POST">
   <div class="form-group">
      <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
      <div class="col-sm-10">
@@ -47,5 +48,7 @@
         <button type="submit" class="btn btn-default">注册</button>
     </div>
   </div>
-</form>
+</form>   
+</div>
+
 {% end %}
