--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
 
 {% block body %}
-{% if error %}
-<span style="color: red">Error: {{ error }}</span><p>
-{% end %}
-<form action="/login" method="POST">
+
+<div class="container">
+    {% if error %}
+    <span style="color: red">Error: {{ error }}</span><p>
+    {% end %}
+  <form action="/login" method="POST" class="form-signin">
   <div class="form-group">
-     <label for="inputEmail4" class="col-sm-2 control-label">邮箱l</label>
+     <label for="inputEmail4" class="col-sm-2 control-label">邮箱</label>
      <div class="col-sm-10">
          <input name="email" type="email" class="form-control" id="inputEmail4" />
      </div>
@@ -24,4 +26,6 @@
     </div>
   </div>
 </form>
+</div>
+
 {% end %}
