--- a/templates/photos_show.html
+++ b/templates/photos_show.html
@@ -76,7 +76,7 @@
           <div class="col-md-3">
             <div class="card mb-3 box-shadow">
               <a href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/{{ photo.photo_id }}">
-              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/images/{{photo.file_name}}" alt="Card image cap"></a>
+              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/images/min/{{photo.photo_id}}.jpg" alt="Card image cap"></a>
               
               <div class="card-body align-items-left">
                 <div class="d-flex justify-content-between align-items-left">
