--- a/templates/feed.html
+++ b/templates/feed.html
@@ -28,9 +28,9 @@
   </div>
 </section>
 <main role="main">
-<div class="container" >
+<div class="container" id="main_body">
 	{%for i in range(len(feed))[::-1]%}
-	<div class="row clearfix" id= {{feed[i]['time']}} >
+	<div class="row clearfix" id= {{feed[i]['feed_id']}} >
 		<div class="col-md-2 column">
 		</div>
 		<div class="col-md-8 column" style="background:url(/static/img/feed_block.jpg);background-repeat:no-repeat;background-size:100% 100%;">
@@ -41,9 +41,11 @@
 				    </p>
                 </div>
                 <div class="col-md-6 column" align="right">
-                   <p>
-					   编辑
-			       </p>
+					{%if user_id == feed[i]['user_id']%}
+                   <button  onclick="feed_delete('{{feed[i]['user_id']}}','{{feed[i]['feed_id']}}')" class="btn btn-default btn-sm">
+					   删除
+			       </button>
+					{%end%}
             </div>
             </div>
 			<p style="word-break:break-all" class="p1">
@@ -124,7 +126,7 @@
 					</p>
 					{%if feed_c[i]%}
 					{%for comment_index in range(len(feed_c[i]))%}
-					<p style="word-break:break-all" >
+					<p style="word-break:break-all"  onclick="comment_delete()">
 						{{feed_c[i][comment_index]['user_name']}}:{{feed_c[i][comment_index]['comment_body']}}
 					</p>
 					{%end%}
