--- a/templates/photos_show.html
+++ b/templates/photos_show.html
@@ -2,7 +2,7 @@
 
 {% block head %}
 <title>{{ escape(handler.settings["website_title"]) }}</title>
-<link rel="stylesheet" href="/static/css/album.css">
+<link rel="stylesheet" href="/static/css/photos.css">
 {% end %}
 
 {% block body %}
@@ -24,7 +24,6 @@
     <h1 class="jumbotron-heading">{{ user.name }}</h1>
     <p>
       <a href="#" class="btn btn-primary my-2">给我打赏</a>
-      <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
     </p>
   </div>
 </section>
@@ -38,7 +37,7 @@
     <div class="card text-center">
         <div class="container mt-4 ml-2 text-left">
             <a class="btn btn-outline-primary btn-sm" href="/photos/new" role="button">上传照片</a>
-            <a class="btn btn-outline-primary btn-sm" href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/edit" role="button">编辑相册</a>
+            <!--<a class="btn btn-outline-primary btn-sm" href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/edit" role="button">编辑相册</a>-->
             {% if photos%}
             <a class="btn btn-outline-primary btn-sm" href="/u/{{ user.id }}/albums/{{ album["album_id"] }}/{{ photos[0].photo_id }}" role="button">幻灯片浏览</a>
             {% end %}
