--- a/templates/successful_delete.html
+++ b/templates/successful_delete.html
@@ -35,7 +35,7 @@
 				</div>
 			</div>
 			<div align="center">
-				<a class="btn btn-outline-secondary btn-sm" href="/albums" role="button">去相册</a>
+				<a class="btn btn-outline-secondary btn-sm" href="{{s}}" role="button">去相册</a>
 			  </div>
 		</div>
        
