--- a/static/css/feed.css
+++ b/static/css/feed.css
@@ -9,9 +9,32 @@
 }
 
 body{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
   height: 100%;
   width:100%;
   background:url(/static/img/feed_back.jpg);
   background-repeat:no-repeat;
   background-size:100% 100%;
+}
+
+.story {
+	margin: 10px 0px;
+}
+.story-creator {
+  	font-size: 20px;
+  	font-weight: 600;
+}
+.story-content {
+	font-size: 40px;
+}
+.story-comments {
+
+}
+.comment-creator {
+	font-weight: 600;
+}
+
+.feed-container {
+	padding: 1rem 0;
 }
