--- a/templates/create_author.html
+++ b/templates/create_author.html
@@ -3,6 +3,9 @@
 
 {% block body %}
 <div class="container">
+        {% if error %}
+        <span style="color: red">Error: {{ error }}</span><p>
+        {% end %}
  <form action="/signup" method="POST">
   <div class="form-group">
      <label for="inputEmail3" class="col-sm-2 control-label">邮箱</label>
