--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
           <div class="row">
             <div class="col-8">
               <h1 class="cover-heading">欢迎来到{{ escape(handler.settings["website_title"]) }}</h1>
-              <p class="lead">网站正在建设中...预计第10周周三完工</p>
+              <p class="lead">这是一个测试版的在线相册- -，很多BUG待修复……</p>
               <p class="lead"></p>
               <p class="lead">
                 <a href="https://github.com/zyuan96/webalbum" class="btn btn-lg btn-secondary">项目的Github仓库</a>
