--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -2,26 +2,37 @@
 
 {% block head %}
 <link rel="stylesheet" href="/static/css/carousel.css">
+<link rel="stylesheet" href="/static/css/album.css">
 {% end %}
 
 {% block body %}
+<section class="jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-2">
+        <img class="rounded-circle" src="/static/img/face.jpg" alt="Generic placeholder image" width="140" height="140">
+      </div>
+      <div class="col-md-10">
+        <h1 class="jumbotron-heading text-white"></h1>
+        <p>
+          <a href="#" class="btn btn-primary my-2">给我打赏</a>
+          <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 <div class ="row">
-<div class="col-sm-8 col-md-8">
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div class="col-sm-8 col-md-8" style="vertical-align: middle;">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style=" margin: 0px auto;border:1px solid gray;"">
   <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="/static/img/face.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/face.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="/static/img/face.jpg" alt="Third slide">
+      <img class="d-block w-100" src="/static/img/face.jpg" height="100%" width="80%" style=" margin: 0px auto;">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -34,13 +45,14 @@
   </a>
 </div>
 </div>
-    <div class="col-sm-4 col-md-4">
-    <div class="thumbnail">
-            <img id ="description" src="/static/img/face.jpg"
+    <div class="col-sm-2 col-md-2" >
+    <div class="thumbnail" style="border:1px solid gray;">
+            <img id ="description" src="/static/img/face.jpg" height="40%" width="40%" align="left"
                  alt="通用的占位符缩略图">
-            <div class="caption">
-                <h3>这是编辑框</h3>
-                <p>一些示例文本</p>
+           <p>用户名</p>
+           <p>上传日期</p>
+            <div class="caption" align="center">
+                <p>照片描述</p>
                 <p>
                     <a href="#" class="btn btn-primary" role="button">
                         图像旋转
