--- a/templates/feed.html
+++ b/templates/feed.html
@@ -15,12 +15,12 @@
 <section class="jumbotron" >
   <div class="container" >
     <div class="row">
-      <div class="col-md-9">
+      <div class="col-md-10">
       </div>
-      <div class="col-md-3">
-        <h1 class="jumbotron-heading text-white">{{ user.nickname }}</h1>
+      <div class="col-md-2" >
+        <h1 class="jumbotron-heading text-blue">{{ user.nickname }}</h1>
         <p>
-          <a href="#" class="btn btn-primary my-2">我也想说</a>
+          <a href="#" class="btn btn-primary my-2">我想说</a>
           <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
         </p>
       </div>
